# pz_mod_builder

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: guide_creating_items.md
examples/: README.md  create_mod.py  validate_existing_mod.py
examples/carved_branch/: mod.info
examples/carved_branch/media/scripts/: carved_branch.txt  testitem.txt
pz_mod_builder/: __init__.py  cli.py  mod_builder.py  mod_info.py
src/pz_mod_builder/: __init__.py  cli.py  mod_builder.py  mod_info.py  scaffold.py
tests/: test_mod_builder.py
