[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pz-mod-builder"
version = "0.1.0"
description = "Python 3 tools for building Project Zomboid version b42 mods"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "pz_mod_builder contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
pzmod = "pz_mod_builder.cli:main"

[project.urls]
Homepage = "https://github.com/wink-/pz_mod_builder"
Repository = "https://github.com/wink-/pz_mod_builder"

[tool.setuptools.packages.find]
where = ["."]
include = ["pz_mod_builder*"]
exclude = ["tests*"]
